{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 47,
  "lineage": "03b1b3fa-00cd-4c28-87c8-a6a40e3fce9a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prod_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02dfbd4ff395f2a1b",
            "arn": "arn:aws:ec2:us-east-1:357938784458:instance/i-080274f5b663daee1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080274f5b663daee1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Kalyankey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-098a13c426aa1f711"
              }
            ],
            "primary_network_interface_id": "eni-098a13c426aa1f711",
            "private_dns": "ip-10-80-1-98.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.80.1.98",
            "public_ip": "13.222.126.44",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0522e8d071e147145",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-038dd5325a3edbe98",
            "tags": {
              "Name": "prod_ser"
            },
            "tags_all": {
              "Name": "prod_ser"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08bef2c52f96a4959"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "i-080274f5b663daee1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.prod_sg",
            "aws_subnet.prod_sn",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "prod_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:internet-gateway/igw-01b78e8f54114dc7d",
            "id": "igw-01b78e8f54114dc7d",
            "owner_id": "357938784458",
            "region": "us-east-1",
            "tags": {
              "Name": "prod_igw"
            },
            "tags_all": {
              "Name": "prod_igw"
            },
            "vpc_id": "vpc-00d489e5a236af87e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prod_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:route-table/rtb-0cc9a31aafc2dd90f",
            "id": "rtb-0cc9a31aafc2dd90f",
            "owner_id": "357938784458",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01b78e8f54114dc7d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod_rt"
            },
            "tags_all": {
              "Name": "prod_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d489e5a236af87e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "rtb-0cc9a31aafc2dd90f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prod_rt_asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089c9fa50a43ae2ed",
            "region": "us-east-1",
            "route_table_id": "rtb-0cc9a31aafc2dd90f",
            "subnet_id": "subnet-038dd5325a3edbe98"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.prod_igw",
            "aws_route_table.prod_rt",
            "aws_subnet.prod_sn",
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "prod_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:security-group/sg-08bef2c52f96a4959",
            "description": "allow SSH,HTTP and HTTPS protocols",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bef2c52f96a4959",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prod_web_sg",
            "name_prefix": "",
            "owner_id": "357938784458",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod_sg"
            },
            "tags_all": {
              "Name": "prod_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00d489e5a236af87e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "sg-08bef2c52f96a4959",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "prod_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:subnet/subnet-038dd5325a3edbe98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.80.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-038dd5325a3edbe98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "357938784458",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "prod_sn"
            },
            "tags_all": {
              "Name": "prod_sn"
            },
            "vpc_id": "vpc-00d489e5a236af87e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "subnet-038dd5325a3edbe98",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.prod_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:357938784458:vpc/vpc-00d489e5a236af87e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.80.0.0/16",
            "default_network_acl_id": "acl-02d8ccd9f3d5bfc3d",
            "default_route_table_id": "rtb-009ee2c49ef845c6d",
            "default_security_group_id": "sg-0c337bf2c96d524eb",
            "dhcp_options_id": "dopt-0c50db0b14ddb7b3a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00d489e5a236af87e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-009ee2c49ef845c6d",
            "owner_id": "357938784458",
            "region": "us-east-1",
            "tags": {
              "Name": "prod_vpc"
            },
            "tags_all": {
              "Name": "prod_vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "357938784458",
            "id": "vpc-00d489e5a236af87e",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}